image and label change

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     <div class="row text-center row-header">
       <div class="col-xs-12">
         <div class="header-col">
-          <img src="img/profiler.png" alt="profile pic" class="img-responsive profile-pic center-block">
-          <h1>Chris Dermody</h1>
+          <img src="img/profiler.jpeg" alt="profile pic" class="img-responsive profile-pic center-block">
+          <h1>Akash Rekalwar</h1>
           <h2>Freelance Web Developer</h2>
-          <a href="mailto:email@email.com" class="email"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>email@email.com</a>
+          <a href="mailto:akash.rekalwar92@gmail.com" class="email"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>akash.rekalwar92@gmail.com</a>
         </div>
         
       </div>
