--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="header-col">
           <img src="img/profiler.jfif" alt="profile pic" class="img-responsive profile-pic center-block">
           <h1>Akash Rekalwar</h1>
-          <h2>Freelance Web Developer</h2>
+          <h2>Fullstack Developer</h2>
           <a href="mailto:akash.rekalwar92@gmail.com" class="email"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>akash.rekalwar92@gmail.com</a>
         </div>
         
