--- a/index.html
+++ b/index.html
@@ -104,21 +104,69 @@
               </span>
             </span>
             <span class="tech-item">
-              <i class="devicon-cplusplus-plain colored"></i>
+              <i class="devicon-dot-net-plain colored"></i>
               <span class="tech-item-text">
-                C++
+                .Net
               </span>
             </span>
             <span class="tech-item">
-              <i class="devicon-java-plain colored"></i>
+              <i class="devicon-html5-plain colored"></i>
               <span class="tech-item-text">
-                Java
+                HTML5
               </span>
             </span>
             <span class="tech-item">
-              <i class="devicon-git-plain colored"></i>
+              <i class="devicon-javascript-plain colored"></i>
               <span class="tech-item-text">
-                Git
+                Java Script
+              </span>
+            </span>
+            <span class="tech-item">
+              <i class="devicon-jquery-plain colored"></i>
+              <span class="tech-item-text">
+                JQuery
+              </span>
+            </span>
+            <span class="tech-item">
+              <i class="devicon-css3-plain colored"></i>
+              <span class="tech-item-text">
+                CSS
+              </span>
+            </span>
+            <span class="tech-item">
+              <i class="devicon-docker-plain colored"></i>
+              <span class="tech-item-text">
+                Docker
+              </span>
+            </span>
+            <span class="tech-item">
+              <i class="devicon-typescript-plain colored"></i>
+              <span class="tech-item-text">
+                Type Script
+              </span>
+            </span>
+            <span class="tech-item">
+              <i class="devicon-jquery-plain colored"></i>
+              <span class="tech-item-text">
+                JQuery
+              </span>
+            </span>
+            <span class="tech-item">
+              <i class="devicon-angularjs-plain colored"></i>
+              <span class="tech-item-text">
+                Angular
+              </span>
+            </span>
+            <span class="tech-item">
+              <i class="devicon-bootstrap-plain colored"></i>
+              <span class="tech-item-text">
+                Bootstrap
+              </span>
+            </span>
+            <span class="tech-item">
+              <i class="devicon-coffeescript-plain colored"></i>
+              <span class="tech-item-text">
+                Cofee Script
               </span>
             </span>
         </div>
