--- a/index.html
+++ b/index.html
@@ -146,9 +146,16 @@
               </span>
             </span>
             <span class="tech-item">
-              <i class="devicon-jquery-plain colored"></i>
+              <i class="devicon-mysql-plain colored"></i>
               <span class="tech-item-text">
-                JQuery
+                SQL
+              </span>
+            </span>
+            
+            <span class="tech-item">
+              <i class="devicon-postgresql-plain colored"></i>
+              <span class="tech-item-text">
+                No SQL
               </span>
             </span>
             <span class="tech-item">
