--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 
   <!-- Projects -->
-  <section style="margin-top:0">
+  <!-- <section style="margin-top:0">
 
     <div class="row">
       <div class="col xs-12">
@@ -78,7 +78,7 @@
     </div>
 
 
-  </section>
+  </section> -->
 
   <hr>
 
@@ -196,7 +196,7 @@
         <div class="list-container">
             <span class="tech-tool-item">
               <span class="glyphicon glyphicon glyphicon-ok" aria-hidden="true"></span>
-              Android Studio
+              Visual Studio Studio
             </span>
             <span class="tech-tool-item">
               <span class="glyphicon glyphicon glyphicon-ok" aria-hidden="true"></span>
@@ -204,11 +204,11 @@
             </span>
             <span class="tech-tool-item">
               <span class="glyphicon glyphicon glyphicon-ok" aria-hidden="true"></span>
-              IntelliJ IDEA
+              XAMARIN Studio
             </span>
             <span class="tech-tool-item">
               <span class="glyphicon glyphicon glyphicon-ok" aria-hidden="true"></span>
-              TortoiseGit
+              Jet Brain
             </span>
             <span class="tech-tool-item">
               <span class="glyphicon glyphicon glyphicon-ok" aria-hidden="true"></span>
