--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
     <div class="row row-footer">
       <div class="col footer-col text-center">
         <h3>I'm available for work</h3>
-        <a href="mailto:email@email.com" class="email"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>email@email.com</a>
+        <a href="mailto:akash.rekalwar92@gmail.com" class="email"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>akash.rekalwar92@gmail.com</a>
       </div>
     </div>
 
